--- a/st-what-to-eat/public/index.html
+++ b/st-what-to-eat/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
 
 
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
@@ -26,7 +26,7 @@
 
         <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=%REACT_APP_MAP_CLIENT_ID%&submodules=geocoder"></script>
 
-    <title>React App</title>
+    <title>과기대에서 오늘 뭐 먹지?</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
